# bluetoof

./: CMakeLists.txt  CMakeSettings.json  README.md  avrcp.py  bluetoof.cpp  bluetoof.py  gladeTest.glade  hello.py
include/: BluetoothManager.h  bluetoof.h
